# django-cropduster

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  LICENSE.Jcrop.txt  MANIFEST.in  README  README.md  README.rst  admin.py  exceptions.py  forms.py  handlers.py  models.py  pyproject.toml  pytest.ini  runtests.py  settings.py  setup.cfg  setup.py  tox.ini  tux.ini  urls.py  utils.py  views.py  widgets.py
.github/workflows/: apt-get-update.sh  npm-grunt.yml  test.yml
cropduster/: __init__.py  admin.py  exceptions.py  exif.py  fields.py  files.py  forms.py  generic.py  handlers.py  metadata.py  models.py  patch.py  related.py  resizing.py  settings.py  shortcuts.py  tests.py  thumbs.py  urls.py  utils.py  views.py  widgets.py
cropduster/fields/: __init__.py  related.py
cropduster/forms/: __init__.py  widgets.py
cropduster/migrations/: 0001_initial.py  0002_add_index_to_image_path.py  0002_alt_text.py  0002_auto__add_standaloneimage.py  0002_auto__add_unique_crop_image_size__add_field_size_create_on_request__ch.py  0003_auto__add_field_image_prev_content_object.py  0003_make_image_model_generic.py  0004_add_auto_thumb_m2m_rows.py  0006_create_content_type_idx.py  0011_update_model_freeze.py  (+4 more)
cropduster3/: admin.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  widgets.py
docs/: conf.py  customization.rst  how_it_works.rst  index.rst  quickstart.rst
migrations/: 0001_initial.py  0004_add_field_image__extension.py  0005_add_attribution_field.py
templatetags/: cropdustermedia.py  images.py
tests/: __init__.py  admin.py  conftest.py  helpers.py  models.py  settings.py  test_admin.py  test_gifsicle.py  test_models.py  test_resizing.py  test_utils.py  test_views.py  urls.py  utils.py
(+131 files in other folders)
