[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-cropduster"
dynamic = ["version", "readme"]
authors = [
  { name="The Atlantic", email="programmers@theatlantic.com" },
]
description = "Django image uploader and cropping tool"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
license = { text = "BSD-2-Clause" }
dependencies = [
    "Pillow",
    "python-xmp-toolkit",
    "django-generic-plus>=2.0.3",
]

[tool.setuptools.packages.find]
include = ["cropduster*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "cropduster.__version__"}
readme = {file = ["README.md"]}

[project.urls]
Homepage = "https://github.com/theatlantic/django-cropduster"
Issues = "https://github.com/theatlantic/django-cropduster/issues"